[build-system]
requires = ["setuptools>=60.0", "wheel", "numpy>=2.2.0"]

[project]
name = "minilsap"
description = "Python module to solve the linear sum assignment problem (LSAP) efficiently"
dynamic = ["version"]
readme = "README.md"
maintainers = [{ name = "Tamas Nepusz", email = "tamas@collmot.com"}]
urls = { homepage = "https://github.com/ntamas/lsap" }
keywords = ["lsap", "munkres", "kuhn-munkres", "linear sum assignment problem"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["numpy>=1.21.0"]

[tool.setuptools.dynamic]
version = { attr = "minilsap._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
build = "cp310-*"
skip = "*-musllinux*"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.macos]
build = "cp310-*"
archs = ["universal2"]

[tool.ruff]
line-length = 80
lint.ignore = ["C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]
