[metadata]
name = lsap
version = attr: lsap.version.__version__
description = Python module to solve the linear sum assignment problem (LSAP) efficiently
long-description = file: README.md, CHANGELOG.md, LICENSE
keywords = lsap, munkres, kuhn-munkres, linear sum assignment problem
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy >=1.21.0
python_requires = >=3.7

[options.packages.find]
where=src

[bdist_wheel]
py_limited_api = cp37

