[metadata]
name = lsap
version = attr: lsap._version.__version__
description = Python module to solve the linear sum assignment problem (LSAP) efficiently
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
maintainer = Tamas Nepusz
maintainer_email = ntamas@gmail.com
url = https://github.com/ntamas/lsap
keywords = lsap, munkres, kuhn-munkres, linear sum assignment problem
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy >=1.21.0
python_requires = >=3.7

[options.packages.find]
where=src

[bdist_wheel]
py_limited_api = cp37
